# tempjacleaner

./: .tempjacleaner_cache.json  README.md  pyproject.toml  scratch_run.py  strict_rules.json  test_rules.json
tempjacleaner/: __init__.py  advanced_rules.py  cache.py  checker.py  cli.py  comments.py  external_rules.py  file_scanner.py  fixer.py  japanese_extractor.py  lt_checker.py  morph.py  nlp_checker.py  spellcheck.py  typo_rules.py
tempjacleaner/rules/: business.json  strict.json  variants.json
tests/: test_advanced.py  test_basic.py  test_comments.py  test_external_rules.py  test_lt_optional.py  test_nlp_optional.py  test_smoke_semantic_morph.py
tools/: build_dict.py
